<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LoginFragment"
    android:background="@color/background_layout">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo"
        android:id="@+id/logo"
        />

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        android:layout_marginTop="70dp"
        android:background="@drawable/edit_text_background"
        android:padding="15dp"
        android:id="@+id/email"
        android:drawableEnd="@drawable/ic_baseline_email_24"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/email"
        android:visibility="invisible"
        android:textColor="@color/error"
        android:id="@+id/error_email"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="70dp"
        android:layout_marginTop="2dp"/>

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:hint="@string/enter_password"
        android:importantForAutofill="no"
        android:id="@+id/password"
        android:background="@drawable/edit_text_background"
        android:padding="15dp"
        android:inputType="textPassword"
        android:drawableEnd="@drawable/ic_baseline_lock_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.754"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        android:id="@+id/restorePassword"
        android:textSize="17sp"
        android:layout_marginTop="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/restorePassword"
        android:id="@+id/error_password"
        android:layout_marginTop="5dp"
        android:textColor="@color/error"
        android:layout_marginStart="70dp"
        android:visibility="invisible"
        />

    <Button
        android:id="@+id/login"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:text="@string/login"
        android:backgroundTint="@color/teal_700"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginBottom="68dp"
        android:text="@string/or"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="68dp"
        android:text="@string/register"
        android:textColor="@color/teal_700"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.588"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
